// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavBar component > matches snapshot when logged in when admin=false 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-lg navbar-light bg-body-tertiary"
  >
    <span
      class="navbar-brand"
    >
      DASH server
    </span>
    <button
      aria-controls="navbarSupportedContent"
      aria-expanded="false"
      aria-label="Toggle navigation"
      class="navbar-toggler collapsed"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <div
      class="collapse navbar-collapse"
      id="navbarSupportedContent"
    >
      <ul
        class="navbar-nav flex-fill"
      >
        <li
          class="nav-item spa"
        >
          <a
            class="nav-link active spa"
            href="/"
            role="menuitem"
          >
            Home
          </a>
        </li>
        <li
          class="nav-item "
        >
          <a
            class="nav-link "
            href="/streams"
            role="menuitem"
          >
            Streams
          </a>
        </li>
        <li
          class="nav-item spa"
        >
          <a
            class="nav-link spa"
            href="/multi-period-streams"
            role="menuitem"
          >
            Multi-Period
          </a>
        </li>
        <li
          class="nav-item "
        >
          <a
            class="nav-link "
            href="/validate/"
            role="menuitem"
          >
            Validate
          </a>
        </li>
        <li
          class="nav-item "
        >
          <a
            class="nav-link "
            href="/media/inspect"
            role="menuitem"
          >
            Inspect
          </a>
        </li>
        <li
          class="nav-item dropdown ms-auto me-4"
        >
          <span
            class="username me-1"
          >
            mediamgr
          </span>
          <button
            aria-expanded="false"
            class="btn btn-light dropdown-toggle"
            data-testid="toggle-user-menu"
            role="menubar"
          >
            <span
              aria-label="gear-fill icon"
              class="bi icon bi-gear-fill "
              role="img"
            />
          </button>
          <ul
            class="dropdown-menu"
          >
            <li>
              <button
                class="dropdown-item"
                role="menuitem"
              >
                Change Password
              </button>
            </li>
            <li>
              <button
                class="dropdown-item"
                role="menuitem"
              >
                Log Out
              </button>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar component > matches snapshot when logged in when admin=true 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-lg navbar-light bg-body-tertiary"
  >
    <span
      class="navbar-brand"
    >
      DASH server
    </span>
    <button
      aria-controls="navbarSupportedContent"
      aria-expanded="false"
      aria-label="Toggle navigation"
      class="navbar-toggler collapsed"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <div
      class="collapse navbar-collapse"
      id="navbarSupportedContent"
    >
      <ul
        class="navbar-nav flex-fill"
      >
        <li
          class="nav-item spa"
        >
          <a
            class="nav-link active spa"
            href="/"
            role="menuitem"
          >
            Home
          </a>
        </li>
        <li
          class="nav-item "
        >
          <a
            class="nav-link "
            href="/streams"
            role="menuitem"
          >
            Streams
          </a>
        </li>
        <li
          class="nav-item spa"
        >
          <a
            class="nav-link spa"
            href="/multi-period-streams"
            role="menuitem"
          >
            Multi-Period
          </a>
        </li>
        <li
          class="nav-item "
        >
          <a
            class="nav-link "
            href="/validate/"
            role="menuitem"
          >
            Validate
          </a>
        </li>
        <li
          class="nav-item "
        >
          <a
            class="nav-link "
            href="/media/inspect"
            role="menuitem"
          >
            Inspect
          </a>
        </li>
        <li
          class="nav-item dropdown ms-auto me-4"
        >
          <span
            class="username me-1"
          >
            mediamgr
          </span>
          <button
            aria-expanded="false"
            class="btn btn-light dropdown-toggle"
            data-testid="toggle-user-menu"
            role="menubar"
          >
            <span
              aria-label="gear-fill icon"
              class="bi icon bi-gear-fill "
              role="img"
            />
          </button>
          <ul
            class="dropdown-menu"
          >
            <li>
              <button
                class="dropdown-item"
                role="menuitem"
              >
                Change Password
              </button>
            </li>
            <li>
              <button
                class="dropdown-item"
                role="menuitem"
              >
                Log Out
              </button>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar component > matches snapshot when not logged in 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-lg navbar-light bg-body-tertiary"
  >
    <span
      class="navbar-brand"
    >
      DASH server
    </span>
    <button
      aria-controls="navbarSupportedContent"
      aria-expanded="false"
      aria-label="Toggle navigation"
      class="navbar-toggler collapsed"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <div
      class="collapse navbar-collapse"
      id="navbarSupportedContent"
    >
      <ul
        class="navbar-nav flex-fill"
      >
        <li
          class="nav-item spa"
        >
          <a
            class="nav-link active spa"
            href="/"
            role="menuitem"
          >
            Home
          </a>
        </li>
        <li
          class="nav-item "
        >
          <a
            class="nav-link "
            href="/streams"
            role="menuitem"
          >
            Streams
          </a>
        </li>
        <li
          class="nav-item spa"
        >
          <a
            class="nav-link spa"
            href="/multi-period-streams"
            role="menuitem"
          >
            Multi-Period
          </a>
        </li>
        <li
          class="nav-item "
        >
          <a
            class="nav-link "
            href="/validate/"
            role="menuitem"
          >
            Validate
          </a>
        </li>
        <li
          class="nav-item "
        >
          <a
            class="nav-link "
            href="/media/inspect"
            role="menuitem"
          >
            Inspect
          </a>
        </li>
        <li
          class="nav-item dropdown ms-auto me-4"
        >
          <button
            class="nav-link"
            role="menuitem"
          >
            Log In
          </button>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;
